--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codetoria Cafeteria</title>
+    <title>Moron Cafeteria</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <h1>Codetoria Cafeteria</h1>
+            <h1>Moron Cafeteria</h1>
             <ul>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#order">Order</a></li>
